--- a/IDBsocialdata/_bookdown.yml
+++ b/IDBsocialdata/_bookdown.yml
@@ -15,7 +15,7 @@ delete_merged_file: true
 rmd_files: [
   "index.rmd",
   
-  "01-Intro-eng.Rmd",
+  "01-Intro-eng.rmd",
   "02-metodologia-eng.Rmd",
   "03-GyD-eng.Rmd",
   "04-Source-eng.Rmd",
