--- a/IDBsocialdata/_bookdown.yml
+++ b/IDBsocialdata/_bookdown.yml
@@ -1,7 +1,7 @@
 book_filename: "idbsocialdata"
 repo: /EL-BID/armonizacion_microdatos_encuestas_hogares_scl
 #/EL-BID/idbsocialdata-methodology
-output_dir: "docs"
+output_dir: "../docs"
 
 language:
 label:
@@ -15,20 +15,20 @@ delete_merged_file: true
 rmd_files: [
   "index.rmd",
   
-  "01-Intro-eng.rmd",
-  "02-metodologia-eng.Rmd",
-  "03-GyD-eng.Rmd",
-  "04-Source-eng.Rmd",
+  #"01-Intro-eng.rmd",
+  #"02-metodologia-eng.Rmd",
+  #"03-GyD-eng.Rmd",
+  #"04-Source-eng.Rmd",
   
-   "01-Intro.Rmd",
-  "02-metodologia.Rmd",
-  "03-GyD.Rmd",
-  "04-Source.Rmd",
+  #"01-Intro.Rmd",
+  #"02-metodologia.Rmd",
+  #"03-GyD.Rmd",
+  #"04-Source.Rmd",
   
-  "01-Intro-pt.Rmd",
-  "02-metodologia-pt.Rmd",
-  "03-GyD-pt.Rmd",
-  "04-Source-pt.Rmd",
+  #"01-Intro-pt.Rmd",
+  #"02-metodologia-pt.Rmd",
+  #"03-GyD-pt.Rmd",
+  #"04-Source-pt.Rmd",
   
-  "05-Track.Rmd",
+  #"05-Track.Rmd",
 ]
